# bebop-cli

./: Cargo.toml  dist-workspace.toml
src/: cache.rs  chains.rs  config.rs  main.rs  tokens.rs  update.rs
src/quote/: firm.rs  mod.rs  types.rs
src/tui/: app.rs  event.rs  message.rs  mod.rs  quote_store.rs  ui.rs
src/tui/state/: config_state.rs  mod.rs  quote_state.rs  theme.rs  tokens_state.rs
src/tui/tabs/: config.rs  dashboard.rs  mod.rs  quote.rs  tokens.rs
src/tui/widgets/: chain_picker.rs  help_overlay.rs  icon.rs  mod.rs  spinner.rs  token_search.rs
