[package]
name = "bebop"
version = "0.1.4"
edition = "2024"
description = "Command-line interface for the Bebop DEX RFQ trading API"
repository = "https://github.com/bebop-dex/bebop-cli"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.20"
terminal_size = "0.4.4"
self_update = { version = "0.43", features = ["archive-tar", "compression-flate2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
