[package]
name = "bebop"
version = "0.1.7"
edition = "2024"
description = "Command-line interface for the Bebop DEX RFQ trading API"
repository = "https://github.com/bebop-dex/bebop-cli"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.20"
terminal_size = "0.4.4"
self_update = { version = "0.43", features = ["archive-tar", "compression-flate2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
